--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TDL - Productivity Companion</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +19,7 @@
 
         <div class="hero-content">
             <div class="logo-box">
-                <img src="logo.png" alt="TDL Logo" class="hero-logo">
+                <img src="assets/logo.png" alt="TDL Logo" class="hero-logo">
             </div>
             
             <h1>Hi, Let's Get Started</h1>
@@ -54,7 +54,7 @@
             <div class="header-content">
                 <div class="brand-container">
                     <div class="dash-icon-box" onclick="goToLanding()" title="Back to Home">
-                        <img src="logo.png" class="dash-logo-small" alt="Logo">
+                        <img src="assets/logo.png" class="dash-logo-small" alt="Logo">
                     </div>
                     <div class="header-text">
                         <h1>Dashboard</h1>
@@ -162,6 +162,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
